# CIRISServer

./: .gitignore  CHANGELOG.md  Cargo.toml  MISSION.md  README.md  WIRE_VOCABULARY_KINDS.md  bench_results.json  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/workflows/: localize-ui.js
.github/workflows/: bench.yml  build-wheels.yml  ci.yml  client-artifacts.yml  conformance.yml  localization.yml  publish-pypi.yml  release.yml  warm-release-cache.yml  windows7-installer.yml
FSD/: BRIDGE_SEED_MESH.md  BRIDGE_UPGRADE_v0.4.9.md  BRIDGE_UPGRADE_v0.5.0.md  BRIDGE_UPGRADE_v0.5.30.md  BRIDGE_UPGRADE_v0.5.53.md  BRIDGE_UPGRADE_v0.5.56.md  BRIDGE_UPGRADE_v0.5.62.md  CEWPOS.md  CHILD_MODERATION_CONTROLS.md  CIRISAGENT_ADOPTION.md  DELEGATION_CONSTRAINTS.md  DELEGATION_EXPANSION.md  EDGE_8_0_OPAQUE_MIGRATION.md  HYBRID_LISP_OS.md  LENS_TO_SERVER_MIGRATION.md  MESH_ANIMATION_BRIEF.md  MESH_SEED_RUNBOOK_POST_DELEGATION.md  MODERATION_CHILD_SAFETY.md  ONE_WHEEL_REEXPORT.md  PQC_AV_STREAMING_BENCH.md  QA_AGAINST_RUST.md  REGISTRY_FOLD_DERISK.md  RNS_CLIENT_TRANSPORT.md  RNS_CONTROL_RELAY.md  ROSTERED_GROUP_KEY_OPS.md  SAFETY_LANDSCAPE.md  SAFE_MESH.md  SAFE_MESH_ROADMAP.md  SELF_DEK_v0.5.56.md  SERVER_1.0_PLAN.md  WATCHLIST_DETECTION.md
app/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/fabric-client/: build.gradle.kts
bench-site/: data.json  index.html  live_mesh.json  scoreboard.json
benches/: alm_chain.rs  erasure_survival.rs  n_eff_scoring.rs  pqc_av_streaming.rs  replication_ingest.rs  sig_overhead.rs  stream_fanout.rs
client/: .gitignore  CLAUDE.md  CLOUD_PORTING_COMPLETE.md  COMPOSE_WEB_MIGRATION.md  HELP_INDEX.md  MIGRATION-KMP2.md  MIGRATION_PLAN.md  PORTING_GUIDE.md  README.md  START_HERE.md  TASKS.md  TESTING_GUIDE.md  build.gradle.kts  gradle.properties  openapi-generator-config.yaml  openapi-spec.json  openapi.json  settings.gradle.kts
client/.ciris_keys/: README.md  secrets_master.key
client/androidApp/: build.gradle  proguard-rules.pro
client/desktopApp/: build.gradle.kts
client/generated-api/: .openapi-generator-ignore  README.md  build.gradle.kts
client/iosApp/: .gitignore  CLAUDE.md  exportOptions.plist  project.yml
client/scripts/: migrate-to-kmp2.sh  validate-kmp2-migration.sh
client/shared/: AUTH_INTEGRATION.md  EXTRACTION_REPORT.md  FILES_CREATED.md  (+2 more)
crates/ciris-lens-core/: .gitignore  .pre-commit-config.yaml  Cargo.toml  MISSION.md  README.md  deny.toml  pyproject.toml
crates/ciris-lens-core/.github/workflows/: bench.yml  ci.yml
crates/ciris-lens-core/FSD/: CIRIS_LENS_CORE.md  LENS_CORE_V0_5.md  OPEN_QUESTIONS.md
crates/ciris-lens-core/benches/: aggregate.rs  canonicalize.rs  project.rs
crates/ciris-lens-core/docs/: BENCHMARKS.md  COHABITATION.md  PRE_COMMIT.md  PUBLIC_SCHEMA_CONTRACT.md  PYPI_PUBLISH.md  RELEASE_NOTES.md  STANDARDS_COMPARISON.md  THREAT_MODEL.md
crates/ciris-lens-core/patterns_from_cirislens_core/extraction/: json_path.rs  metadata.rs  mod.rs
crates/ciris-lens-core/patterns_from_cirislens_core/scrubber/: distilbert_loader.rs  fields.rs  mod.rs  ner.rs  ort_loader.rs  proptests.rs  regex.rs  walker.rs  xlm_r_loader.rs
crates/ciris-lens-core/python/ciris_lens_core/: __init__.py
crates/ciris-lens-core/src/: lib.rs
crates/ciris-lens-core/src/audit/: api.rs  delegate.rs  mod.rs  pyo3.rs
crates/ciris-lens-core/src/canonical/: ceg_egress.rs  mod.rs
crates/ciris-lens-core/src/capacity/: attestation.rs  mod.rs  score.rs
crates/ciris-lens-core/src/capture/: batch.rs  client.rs  consent.rs  correlation.rs  event.rs  mod.rs  partial.rs  py_engine.rs  seal.rs
crates/ciris-lens-core/src/cohort/: declared.rs  mod.rs  resourcing.rs
crates/ciris-lens-core/src/config/: egress.rs  mod.rs  node.rs  retention.rs  upstream.rs
crates/ciris-lens-core/src/detector/: axis_metrics.rs  coherence_ratchet.rs  correlated_action.rs  distributive_access.rs  manifold.rs  mod.rs
crates/ciris-lens-core/src/extract/: mod.rs  projection.rs
crates/ciris-lens-core/src/ffi/: mod.rs  pyo3.rs
crates/ciris-lens-core/src/observability/: mod.rs
crates/ciris-lens-core/src/pipeline/: lifecycle.rs  mod.rs
crates/ciris-lens-core/src/retention/: eviction.rs  mod.rs  summary.rs
crates/ciris-lens-core/src/role/: handler.rs  mod.rs  node.rs  relay.rs  ret_relay.rs
crates/ciris-lens-core/src/scores/: aggregate.rs  mod.rs  oracle.rs
crates/ciris-lens-core/src/scoring/: assembly.rs  axis_calibration.rs  calibration.rs  capacity.rs  mod.rs  n_eff.rs  result.rs
crates/ciris-lens-core/src/signing/: event.rs  mod.rs
crates/ciris-lens-core/src/wire/: mod.rs  signer.rs
crates/ciris-lens-core/tests/: sovereign_rlib.rs
crates/ciris-lens-core/tests/parity/: README.md  canonical_fixtures.json  generate_canonical_fixtures.py
data/: live_mesh_2026-06-22.json
docs/: SCOPE_PRIVACY.md
qa/: README.md  fabric_results.json  run_fabric.py  seed_wa_cert.py
scripts/: bench_report.py
src/: accord.rs  accord_custody.rs  accord_halt.rs  accord_provision.rs  accord_reactivate.rs  adapter.rs  claim_remote.rs  compose.rs  config.rs  config_api.rs  config_reconcile.rs  delegation_transparency.rs  family.rs  federation_admin.rs  federation_nodecode.rs  federation_peers.rs  graph_config.rs  health.rs  holonomic.rs  http_log.rs  identity.rs  ids.rs  import.rs  ingest_http.rs  lib.rs  main.rs  memory_api.rs  mesh_relay.rs  nodecode.rs  peer.rs  proxy.rs  py_adapter.rs  quorum.rs  radio.rs  replication_reconcile.rs  scorer.rs  system_data.rs  telemetry_logs.rs
tests/: accord.rs  alm_chain.rs  audit_chain.rs  capacity_scorer.rs  chaos_mesh.rs  claim_remote.rs  config_reconcile.rs  device_grant.rs  federation_admin.rs  federation_session_kex.rs  graph_config.rs  ingest_http.rs  mesh_seed_e2e.rs  nat_traversal.rs  nodecode.rs  noise_floor.rs  occurrence.rs  ownership.rs  peer_replication.rs  portable_occurrence.rs  release_gates.rs  replication.rs  replication_reconcile.rs  root_bootstrap.rs  safety.rs  stream_sth_consistency.rs  wire_vocabulary_gate.rs
tools/: audit_cohort_scope_callers.py
(+1835 files in other folders)
