[package]
name = "ciris-server"
version = "0.1.2"   # 0.1 = lens-only (agent ~2.9.7); 0.5 = +registry (~2.9.8); 1.0 = +node (~2.9.10). Patch forward (0.1.1) on breakage.
edition = "2021"
# MSRV floor is set by the substrate: ciris-verify v5.2.0 requires 1.86
# (persist v6.0.1 is 1.83). Build with the higher of the two.
rust-version = "1.86"
authors = ["Eric Moore <eric@ciris.ai>"]
description = "The fabric node — the federation's headless cohabitation runtime (registry + lens [+ node] over one shared substrate). agent = fabric node + brain. Shipped as both the ciris-server binary and a PyO3 abi3 wheel CIRISAgent consumes. See MISSION.md."
license = "AGPL-3.0-or-later"
repository = "https://github.com/CIRISAI/CIRISServer"
readme = "README.md"
publish = false

# CIRISServer is ONE cohabitation composition in TWO shapes (MISSION.md §1.2/§6):
#   - [lib] cdylib  → the PyO3 abi3 wheel CIRISAgent pip-installs (the agent is
#                     pure Python; it consumes ciris-server, not the cores).
#   - [lib] rlib    → so the ciris-server binary links the same composition.
#   - [[bin]]       → the headless fabric node deployment.
# The composition lives in src/lib.rs; src/main.rs is a thin entry point.
[workspace]
# lens-core is absorbed in-tree (CIRISLensCore repo retired); the root package
# composes it as a path dep. node-core folds in here the same way at Server 1.0.
members = ["crates/ciris-lens-core"]
resolver = "2"

[lib]
name = "ciris_server"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "ciris-server"
path = "src/main.rs"

[features]
default = []
# `python` pulls the PyO3 bindings (for the wheel). The binary builds WITHOUT it,
# so a plain `cargo build` never links libpython.
python = ["dep:pyo3", "dep:pyo3-async-runtimes", "ciris-lens-core/python"]
# `extension-module` is what maturin builds the wheel with (tells PyO3 not to
# link libpython). The bin must NOT enable it. See pyproject.toml [tool.maturin].
extension-module = ["python", "pyo3/extension-module"]
# NOTE: hardware key custody (TPM/SE/StrongBox) is wired per-TARGET below, not as
# a cargo feature — TPM (tss-esapi) is Linux-only, so a top-level `tpm` feature
# made `--all-features` drag tss-esapi onto Windows/macOS (where it can't build).
# The `[target.'cfg(target_os = "linux")']` table enables keyring/tpm + persist
# postgres on Linux only; runtime auto-detects hardware and degrades to encrypted
# software when absent (`is_hardware_backed()` reports the posture). This mirrors
# the substrate crates' per-target keyring/postgres gating.

# ----------------------------------------------------------------------------
# Dependencies — CIRISServer AUTHORS NO PRIMITIVES. It composes the core
# libraries over ONE shared persist Engine (registry + lens read/write the same
# corpus in-process; per-slice views via Engine::from_shared).
#
# Substrate floor (the 6.5 / edge-3.2 family; SHIPPED — scouted 2026-06-14):
#   ciris-persist v6.6.0   (pyo3 0.29; + Engine::with_hardware_signer — TPM federation key, #220)
#   ciris-edge    v3.2.0   (family floor edge>=3.2.0,<4 — the old "tag v3.0.0"
#                             gate is CLOSED; edge shipped to PyPI + git tag)
#   ciris-verify  v5.2.0   (threshold::verify_quorum_policy / verify_founder_quorum)
# pyo3 0.29 transitively; workspace MSRV 1.86 (verify's floor).
#
# The cores still CO-BUMP to this floor before the binary builds: lens-core
# v1.4.2 and registry-core v2.3.0 are on the persist-5.5.5/edge-2.2.2 floor.
# This is now the ONLY cross-repo blocker — there is NO edge-tag gate anymore.
# The lens-core co-bump (CIRISLensCore#53) is the LIVE critical path (it unblocks
# the lens-only 0.1 milestone); registry-core (CIRISRegistry#76) follows for 0.5.
# No core API change is needed — CIRISServer adapts to existing wiring
# (LensCore::attach_handler unchanged; registry build_client/http::serve; edge
# via lens-core's ret_relay pattern, single-process = no leader election).
# ----------------------------------------------------------------------------
[dependencies]
# The composed cores (authority + observation; node folds in at Server 1.0).
# ciris-registry-core — re-added at Server 0.5, co-bumped to the 6.6/edge-3.2 floor
# (CIRISRegistry#76). Held OUT of the 0.1 graph: registry-core@main still pins the
# OLD floor (persist 5.5.5 / edge 2.2.2 / verify 5.1.3) and would drag a second
# persist+edge rev into the build. The compose_registry() scaffold stays in
# src/compose.rs; this dep returns once registry co-bumps.
ciris-lens-core     = { path = "crates/ciris-lens-core" } # ABSORBED in-tree (workspace member); CIRISLensCore repo retired
# ciris-node-core   — folds in at Server 1.0 / agent 2.9.10 (a substrate gen behind: persist 4.10).

# The substrate trio (also pulled transitively by the cores; pinned here so the
# composition root owns the singleton construction).
# sqlite on all platforms; postgres is Linux-only (libpq/openssl don't link
# cleanly on the macOS/Windows runners — same posture as persist's own CI). The
# `[target.linux]` table below adds postgres.
ciris-persist     = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v7.0.0", features = ["sqlite"] }
ciris-edge        = { git = "https://github.com/CIRISAI/CIRISEdge", tag = "v3.6.0", features = ["transport-reticulum", "transport-http"] }
# Founder-quorum verification + key-id fingerprint at the composition root
# (threshold:: module path — NOT re-exported at the crate root).
ciris-verify-core = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v5.6.0" }
# Hardware-backed transport-identity keystore (verify v5.2.0 #68 / edge #99).
# Base = software keystore + byte-identical migration of an existing .rid (works
# everywhere, no libtss2). The real TPM-2.0 / SE / StrongBox backend rides the
# `tpm` feature; runtime auto-detects hardware and falls back to software.
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v5.6.0", version = "5", features = ["software", "pqc-ml-dsa"] }

# PyO3 bindings for the abi3 wheel — optional, gated behind the `python` feature
# so the binary never links them. 0.29 matches the persist/edge family floor.
pyo3                = { version = "0.29", features = ["abi3-py310"], optional = true }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"], optional = true }

tokio   = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
anyhow  = "1"
fs2       = "0.4"   # available-disk check for realistic-minimum feature gating
# GET /v1/identity (the fabric-node identity surface) — merged onto the lens
# read-API listener. axum pinned to lens-core's 0.8 so the merged Router unifies.
axum       = "0.8"
base64     = "0.22"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Linux-only hardware + Postgres: cargo UNIONS these onto the base deps above.
# - persist `postgres` (libpq/openssl) — Linux deployment + the postgres
#   conformance lane; macOS/Windows stay sqlite-only.
# - keyring `tpm` (tss-esapi / TPM 2.0) — the real hardware backend; needs
#   libtss2 (Linux build dep). Other targets keep the software keystore.
[target.'cfg(target_os = "linux")'.dependencies]
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v7.0.0", features = ["postgres"] }
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v5.6.0", version = "5", features = ["tpm"] }

# Test-only — the two-node replication integration test (tests/replication.rs)
# builds + signs CEG batches with the same primitives persist verifies against.
# ed25519-dalek MUST match persist's locked 2.x (the SigningKey type crosses the
# Engine::with_signer / put_public_key API boundary).
[dev-dependencies]
ed25519-dalek = "2"
base64        = "0.22"
chrono        = { version = "0.4", features = ["serde"] }
serde_json    = "1"
criterion     = { version = "0.5", features = ["async_tokio"] }
# The PQC primitives the realtime-A/V E2E bench drives directly: hybrid KEX
# (X25519 + ML-KEM-768) for the per-Link transit key, AES-256-GCM for the
# two-layer chunk seal. Same pin/features edge composes (tag parity).
ciris-crypto  = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v5.6.0", version = "5", features = ["hybrid-kex", "aes-gcm"] }

# PQC realtime-A/V streaming E2E benchmark (CIRISEdge#62 realtime_av profile).
[[bench]]
name = "pqc_av_streaming"
harness = false

# Replication / corpus-ingest throughput (the CEG-RC5 receive spine).
[[bench]]
name = "replication_ingest"
harness = false

[profile.release]
# panic strategy stays "unwind" (the Win7 build-std lane relies on this being
# pinned here, not on the build-std crate list — see release.yml win7 lane).
panic = "unwind"
strip = false   # release workflow strips per-target after build
