[package]
name = "ciris-server"
version = "0.4.9"   # 0.1 = lens-only (agent ~2.9.7); 0.3 = +auth subsystem / one-wheel; 0.4 = +federation peering/identity (capacity scoring, consent:replication, register_federation_key gate, root-bootstrap, NodeCode); 0.4.1 = self-attested first-run root claim (#887); 0.4.2 = one-time claim PIN; 0.4.3 = CC-compliant ownership (infra:* responsible-party owner-binding, no agency, serve-only-until-owned); 0.4.4 = substrate-native user-signed owner-binding — 1-phase /v1/setup/root + the local node's /v1/setup/claim-remote (client is a node; crypto only in the substrate); 0.5 = +registry (~2.9.8); 1.0 = +node (~2.9.10). Patch forward on breakage.
edition = "2021"
# MSRV floor is set by the substrate: ciris-verify v5.2.0 requires 1.86
# (persist v6.0.1 is 1.83). Build with the higher of the two.
rust-version = "1.86"
authors = ["Eric Moore <eric@ciris.ai>"]
description = "The fabric node — the federation's headless cohabitation runtime (registry + lens [+ node] over one shared substrate). agent = fabric node + brain. Shipped as both the ciris-server binary and a PyO3 abi3 wheel CIRISAgent consumes. See MISSION.md."
license = "AGPL-3.0-or-later"
repository = "https://github.com/CIRISAI/CIRISServer"
readme = "README.md"
publish = false

# CIRISServer is ONE cohabitation composition in TWO shapes (MISSION.md §1.2/§6):
#   - [lib] cdylib  → the PyO3 abi3 wheel CIRISAgent pip-installs (the agent is
#                     pure Python; it consumes ciris-server, not the cores).
#   - [lib] rlib    → so the ciris-server binary links the same composition.
#   - [[bin]]       → the headless fabric node deployment.
# The composition lives in src/lib.rs; src/main.rs is a thin entry point.
[workspace]
# lens-core is absorbed in-tree (CIRISLensCore repo retired); the root package
# composes it as a path dep. node-core folds in here the same way at Server 1.0.
members = ["crates/ciris-lens-core"]
resolver = "2"

[lib]
name = "ciris_server"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "ciris-server"
path = "src/main.rs"

[features]
default = []
# `python` pulls the PyO3 bindings (for the wheel). The binary builds WITHOUT it,
# so a plain `cargo build` never links libpython.
# ONE-WHEEL RE-EXPORT (CIRISServer#4): `python` ALSO turns on the substrate
# crates' OWN pyo3 surfaces (`ciris-persist/pyo3`, `ciris-edge/pyo3`) so their
# `#[pyclass]`es compile into THIS cdylib — one `.so`, one PyO3 type registry,
# so the persist `Engine` handed to edge is the SAME type both sides see (the
# CIRISPersist#109 cross-wheel type-identity bug CANNOT occur). persist names its
# feature `pyo3` (not `python`); edge likewise, and edge's `pyo3` already pulls
# `ciris-persist/pyo3` transitively — both listed for explicitness. verify is
# deliberately ABSENT: it is a ctypes wheel (libciris_verify_ffi.so via
# ctypes.CDLL), not a `#[pymodule]`, so it cannot be a pyo3 submodule.
python = [
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "ciris-lens-core/python",
    "ciris-persist/pyo3",
    "ciris-edge/pyo3",
]
# `extension-module` is what maturin builds the wheel with (tells PyO3 not to
# link libpython). The bin must NOT enable it. See pyproject.toml [tool.maturin].
# Propagated to the substrate crates so THEIR pyo3 surfaces also skip linking
# libpython (each crate gates `extension-module` as its own feature).
extension-module = [
    "python",
    "pyo3/extension-module",
    "ciris-persist/extension-module",
    "ciris-edge/extension-module",
]
# `pkcs11` turns on the YubiKey (PKCS#11 / PIV) custody backend for the USER
# federation identity (`ciris-server identity create --backend pkcs11`). OFF by
# default: a plain `cargo build` never links `cryptoki`, and the Pkcs11 backend
# honestly returns NotSupported without it. It flips `ciris-keyring/pkcs11` on
# (operator hardware; Linux). The YubiKey path is hardware-validated by the
# operator — there is no token in CI, so it is gated + flagged, not unit-tested.
# Like the per-target `tpm` posture, it is NOT in `default`; build it explicitly
# (`--features pkcs11`) on a Linux box with a token attached.
pkcs11 = ["ciris-keyring/pkcs11"]
# NOTE: hardware key custody (TPM/SE/StrongBox) is wired per-TARGET below, not as
# a cargo feature — TPM (tss-esapi) is Linux-only, so a top-level `tpm` feature
# made `--all-features` drag tss-esapi onto Windows/macOS (where it can't build).
# The `[target.'cfg(target_os = "linux")']` table enables keyring/tpm + persist
# postgres on Linux only; runtime auto-detects hardware and degrades to encrypted
# software when absent (`is_hardware_backed()` reports the posture). This mirrors
# the substrate crates' per-target keyring/postgres gating.

# ----------------------------------------------------------------------------
# Dependencies — CIRISServer AUTHORS NO PRIMITIVES. It composes the core
# libraries over ONE shared persist Engine (registry + lens read/write the same
# corpus in-process; per-slice views via Engine::from_shared).
#
# Substrate floor (SHIPPED): persist v8.6.0 / edge v4.5.0 / verify-family v5.11.0
# (ciris-keyring + ciris-crypto + ciris-verify-core), CEG 1.0-RC12. The composition
# root pins the singleton construction; the in-tree ciris-lens-core co-bumps in
# lockstep (MAJOR caret pins persist "8" / edge "4"). edge v4.2.0 ships the relay
# outer-open primitive (`open_av_outer`, CIRISEdge#149) → multi-tier ALM chains
# (benches/alm_chain.rs). All additive; no composition-root API change. pyo3 0.29.
# ----------------------------------------------------------------------------
[dependencies]
# The composed cores (authority + observation; node folds in at Server 1.0).
# ciris-registry-core — re-added at Server 0.5, co-bumped to the 6.6/edge-3.2 floor
# (CIRISRegistry#76). Held OUT of the 0.1 graph: registry-core@main still pins the
# OLD floor (persist 5.5.5 / edge 2.2.2 / verify 5.1.3) and would drag a second
# persist+edge rev into the build. The compose_registry() scaffold stays in
# src/compose.rs; this dep returns once registry co-bumps.
ciris-lens-core     = { path = "crates/ciris-lens-core" } # ABSORBED in-tree (workspace member); CIRISLensCore repo retired
# ciris-node-core   — folds in at Server 1.0 / agent 2.9.10 (a substrate gen behind: persist 4.10).

# The substrate trio (also pulled transitively by the cores; pinned here so the
# composition root owns the singleton construction).
# sqlite on all platforms; postgres is Linux-only (libpq/openssl don't link
# cleanly on the macOS/Windows runners — same posture as persist's own CI). The
# `[target.linux]` table below adds postgres.
# `cirislens_wa_cert` + `cirislens_service_token_revocation` expose the auth
# substrate the fabric absorbs (CIRISServer#9, src/auth): the agent's `wa_cert`
# table (users/WA/OAuth/api-keys) + the `revoked_service_tokens` table.
ciris-persist     = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v9.0.2", features = ["sqlite", "cirislens_wa_cert", "cirislens_service_token_revocation"] }
ciris-edge        = { git = "https://github.com/CIRISAI/CIRISEdge", tag = "v5.0.0", features = ["transport-reticulum", "transport-http"] }
# Founder-quorum verification + key-id fingerprint at the composition root
# (threshold:: module path — NOT re-exported at the crate root).
# v6.0.0 (NOT v6.1.0): persist v9.0.0 transitively pins verify v6.0.0; pinning
# v6.1.0 produces two ciris_verify_core crates with incompatible ThresholdMember.
ciris-verify-core = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v6.2.0" }
# Hardware-backed transport-identity keystore (verify v5.2.0 #68 / edge #99).
# Base = software keystore + byte-identical migration of an existing .rid (works
# everywhere, no libtss2). The real TPM-2.0 / SE / StrongBox backend rides the
# `tpm` feature; runtime auto-detects hardware and falls back to software.
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v6.2.0", version = "6", features = ["software", "pqc-ml-dsa"] }

# PyO3 bindings for the abi3 wheel — optional, gated behind the `python` feature
# so the binary never links them. 0.29 matches the persist/edge family floor.
pyo3                = { version = "0.29", features = ["abi3-py310"], optional = true }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"], optional = true }

tokio   = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
anyhow  = "1"
fs2       = "0.4"   # available-disk check for realistic-minimum feature gating
# GET /v1/identity (the fabric-node identity surface) — merged onto the lens
# read-API listener. axum pinned to lens-core's 0.8 so the merged Router unifies.
axum       = "0.8"
base64     = "0.22"
serde      = { version = "1", features = ["derive"] } # holonomic scoreboard model (benchmarks::)
serde_json = "1"
getrandom  = "0.3"   # mint the ML-DSA-65 federation seed on first boot (hybrid PQC)
# Auth subsystem (src/auth, CIRISServer#9): timestamps on the absorbed wa_cert
# rows, SHA-256 for api-key / service-token hashing, hex for the digest wire form.
# All three already in the lock as substrate-transitive deps (no new resolution).
chrono     = { version = "0.4", features = ["serde"] }
sha2       = "0.10"
hex        = "0.4"
# Auth gap-close (CIRISServer#9, src/auth): the byte-compatible password KDF +
# the OAuth/native/device-auth outbound-HTTP + JWKS-verify halves. All already in
# the lock as substrate-transitive deps (reqwest/jsonwebtoken via edge+verify;
# pbkdf2/hmac/ed25519-dalek via the crypto family) — pinned here so the auth
# subsystem owns them directly, no new resolution.
# - pbkdf2 + hmac: reproduce the agent's PBKDF2-HMAC-SHA256(100k) password hash
#   (auth_service.py `_hash_password`/`_verify_password`) byte-for-byte.
# - ed25519-dalek: verify the ROOT mint signature (the agent's `verify_root_signature`).
# - jsonwebtoken: Apple Sign-In RS256 JWKS verification.
# - reqwest (rustls): Google tokeninfo / OAuth code→token / Apple JWKS / Portal HTTP.
# - urlencoding: build the provider authorize-URL query string (matches urlencode).
pbkdf2     = { version = "0.12", default-features = false }
hmac       = "0.12"
subtle     = "2"     # constant-time password-hash compare (the agent's hmac.compare_digest)
ed25519-dalek = "2"
jsonwebtoken  = "9"
urlencoding   = "2"
async-trait   = "0.1"  # the ProviderClient HTTP seam (async fn in trait)
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
flate2     = "1"     # read the gz'd legacy-trace dump (import-traces subcommand)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Linux-only hardware + Postgres: cargo UNIONS these onto the base deps above.
# - persist `postgres` (libpq/openssl) — Linux deployment + the postgres
#   conformance lane; macOS/Windows stay sqlite-only.
# - keyring `tpm` (tss-esapi / TPM 2.0) — the real hardware backend; needs
#   libtss2 (Linux build dep). Other targets keep the software keystore.
[target.'cfg(target_os = "linux")'.dependencies]
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v9.0.2", features = ["postgres", "cirislens_wa_cert", "cirislens_service_token_revocation"] }
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v6.2.0", version = "6", features = ["tpm"] }

# Android (arm64/arm32/x86_64): the keyring `android` backend (JNI → Android
# Keystore/StrongBox); sqlite bundles, no postgres/tpm. Mirrors persist/edge.
[target.'cfg(target_os = "android")'.dependencies]
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v6.2.0", version = "6", features = ["android"] }

# Test-only — the two-node replication integration test (tests/replication.rs)
# builds + signs CEG batches with the same primitives persist verifies against.
# ed25519-dalek MUST match persist's locked 2.x (the SigningKey type crosses the
# Engine::with_signer / put_public_key API boundary).
[dev-dependencies]
ed25519-dalek = "2"
base64        = "0.22"
chrono        = { version = "0.4", features = ["serde"] }
serde_json    = "1"
criterion     = { version = "0.5", features = ["async_tokio"] }
# Drive the merged axum Router in-process for the HTTP trace-ingest test
# (tests/ingest_http.rs): `ServiceExt::oneshot` + read the response body. tower
# 0.5 / http-body-util 0.1 match axum 0.8's floor (already in-tree transitively).
tower            = { version = "0.5", features = ["util"] }
http-body-util   = "0.1"
# The PQC primitives the realtime-A/V E2E bench drives directly: hybrid KEX
# (X25519 + ML-KEM-768) for the per-Link transit key, AES-256-GCM for the
# two-layer chunk seal. Same pin/features edge composes (tag parity).
ciris-crypto  = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v6.2.0", version = "6", features = ["hybrid-kex", "aes-gcm", "pqc-ml-dsa"] }
# Enable edge's OWN fountain codec (`codec-fountain`, L1-A) for the survival-floor
# proof — dev/test ONLY (feature unification applies to test/bench builds; the
# shipped wheel stays codec-free, since a relay forwards sealed symbols opaquely
# and never encodes/decodes). This lets tests/chaos_mesh.rs exercise the SUBSTRATE
# codec (`fountain_encode`/`fountain_decode`) directly — a real MEASURED proof,
# not a reference stand-in.
ciris-edge    = { git = "https://github.com/CIRISAI/CIRISEdge", tag = "v5.0.0", features = ["codec-fountain"] }

# PQC realtime-A/V streaming E2E benchmark (CIRISEdge#62 realtime_av profile).
[[bench]]
name = "pqc_av_streaming"
harness = false

# Replication / corpus-ingest throughput (the CEG-RC5 receive spine).
[[bench]]
name = "replication_ingest"
harness = false

# Multi-tier ALM relay chain (CIRISEdge#149 open_av_outer) — per-hop + per-depth
# cost; the E2E byte-survival invariant is gated in tests/alm_chain.rs.
[[bench]]
name = "alm_chain"
harness = false

# Sustained multi-stream seal throughput — measures the actual core-fraction to
# seal N blob streams @30fps in a real loop (promotes the page's "2,000 blob
# streams ≈ 6-10% of a core" from arithmetic to MEASURED).
[[bench]]
name = "stream_fanout"
harness = false

[profile.release]
# panic strategy stays "unwind" (the Win7 build-std lane relies on this being
# pinned here, not on the build-std crate list — see release.yml win7 lane).
panic = "unwind"
strip = false   # release workflow strips per-target after build
